--- a/index.html
+++ b/index.html
@@ -2,22 +2,31 @@
 <html>
   <head>
     <title>AR.js Test</title>
-    <!-- A-Frame (3D/VR Framework) -->
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <!-- AR.js für Marker Tracking -->
     <script src="https://cdn.jsdelivr.net/npm/ar.js@3.3.2/aframe/build/aframe-ar.min.js"></script>
+    <style>
+      body { margin: 0; overflow: hidden; font-family: sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; background: #fff; }
+      #startButton { padding: 20px 40px; font-size: 1.2em; cursor: pointer; }
+    </style>
   </head>
-  <body style="margin: 0; overflow: hidden;">
-    <a-scene embedded arjs>
-      
-      <!-- Marker auswählen: preset="hiro" (fertiger Marker) -->
+  <body>
+    <button id="startButton">Kamera starten</button>
+
+    <a-scene embedded arjs style="display:none;">
       <a-marker preset="hiro">
-        <!-- PNG-Bild auf Marker -->
         <a-image src="testbild.png" width="1" height="1" position="0 0.5 0"></a-image>
       </a-marker>
-
-      <!-- Kamera für AR -->
       <a-entity camera></a-entity>
     </a-scene>
+
+    <script>
+      const button = document.getElementById('startButton');
+      const scene = document.querySelector('a-scene');
+
+      button.addEventListener('click', () => {
+        scene.style.display = 'block';  // Szene anzeigen
+        button.style.display = 'none';  // Button ausblenden
+      });
+    </script>
   </body>
 </html>
